2002-01-11  Bradford Hovinen  <hovinen@ximian.com>

	* mime-edit-dialog.c (add_ext_cb): Don't create a separate dialog;
	just read from new_ext_entry

	* service-info.c (get_apps_for_service_type): Implement

	* service-edit-dialog.c (program_changed_cb): Implement
	(service_edit_dialog_init): Connect program_select changed signal
	(populate_app_list): Fill app menu with results from
	get_apps_for_service_type

	* service-info.c (fill_service_apps): Implement

	* service-edit-dialog.c (store_data): Retrieve app info from
	option menu

	* file-types-capplet.c (apply_cb): Commit the changeset
	(main): Construct a changeset
	(edit_cb): Pass the changeset to service_info_new

	* service-info.c (set_string): Don't set the value if it is NULL
	(service_info_load): Store changeset in info structure
	(service_info_save): Don't require a changeset; use the one stored
	in the structure

	* service-edit-dialog.c (store_data): Call service_info_save

	* mime-edit-dialog.c (add_ext_cb): Terminate column list with -1

	* service-edit-dialog.c (store_data): Call service_info_update

	* mime-edit-dialog.c (store_data): Call mime_type_info_update

	* mime-type-info.c (mime_type_info_update): Implement. Updates the
	model with data from the structure

	* service-info.c (service_info_update): Implement. Updates the
	model with data from the structure

	* mime-type-info.c (form_extensions_string): Implement. Factor
	from mime_type_info_save

	* service-info.c (service_info_load): Accept model and iter rather
	than protocol name; read protocol name from model

	* mime-type-info.c (mime_type_info_load): Accept model and iter
	rather than mime type; read the mime type from the model

	* mime-types-model.c (get_icon_pixbuf): Make this public

	* service-edit-dialog.c (fill_dialog): Set the protocol entry
	insensitive if the protocol is already set; don't put unknown in
	the protocol entry

	* mime-types-model.c: Include gnome-vfs-mime-info.h
