@@ -3,10 +3,8 @@
  - Validation
  - Talk to gnome-vfs people about edit and print lines
  - Do something better about custom-line (i.e. create a dummy app in the app register)
- - Make MIME types tree accept double clicks
  - Implement tree cascading
  - Fix gnome_url_show
- - Don't have a separate add extension dialog, just put it in the same dialog as everything else
  - Make add work
 
 CVS Surgery
