@@ -1,5 +1,8 @@
 2002-01-11  Bradford Hovinen  <hovinen@ximian.com>
 
+	* file-types-capplet.c (row_activated_cb): Implement. Callback for
+	row_activated signal
+
 	* mime-edit-dialog.c (add_ext_cb): Don't create a separate dialog;
 	just read from new_ext_entry
 
